<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_story_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_image_24"
        android:scaleType="centerCrop"
        android:contentDescription="@string/iv_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cameraX"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/camerax"
        app:layout_constraintTop_toBottomOf="@id/iv_story_preview"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="4dp"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@id/iv_story_preview"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toEndOf="@id/btn_cameraX" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/open_gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_story_preview"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descEtLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery">

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_description"
            android:lines="12"
            android:minLines="4"
            android:maxLines="16"
            android:gravity="start|top"
            android:scrollbars="vertical"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEtLayout" />

    <ProgressBar
        android:id="@+id/pb_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
